--- a/README.rdoc
+++ b/README.rdoc
@@ -7,13 +7,17 @@ Gitmine displays the last 10 commits of your repo and their associated redmine t
 
 == Setup
 Put the config file '.gitmine.yml' at the root of your project. Here is a sample file:
-<pre>
-host:     'https://redmine.yourcompany.com
-api_key:  'your_api_key'
-</pre>
+
+    host:     'https://redmine.yourcompany.com
+    # Api key is required for private projects only.
+    api_key:  'your_api_key'
 
 Then run gitmine at the root of your project.
 
+== Note on Issues
+
+* Issues are managed by redmine on http://redmine-gitmine.heroku.com/projects/gitmine
+* Thanks for reporting issues on http://redmine-gitmine.heroku.com/projects/gitmine/issues/new
 
 == Note on Patches/Pull Requests
  
