--- a/README.rdoc
+++ b/README.rdoc
@@ -18,7 +18,9 @@ Put the config file '.gitmine.yml' at the root of your project. Here is a sample
       # Should be the database id of the closed / deployed status in Redmine
       reviewed: 5
       # Should be the database id of the staged status in Redmine
-      staged: 3 
+      staged: 3
+
+You can also put config value in your home directory under '~/.gitmine.yml'.  This is a great place to store host, api_key and statuses if they do not change from project to project.  Values in the local .gitmine.yml always override those in the home directory.
 
 == Usage
 
